# SmartSpare-AI

./: .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: graph.py  state.py  tools.py
app/agents/nodes/: diagonosis.py  procurement.py  query.py  supervisor.py
app/api/: dependencies.py  router.py
app/api/identity/: auth.py
app/api/intelligence/: agents.py  router.py
app/api/warehouse/: inventory.py  procurement.py
app/core/: config.py  database.py  security.py
app/models/: base.py  inventory.py  tenant.py
app/rag/: document.py  vector_db.py
app/schemas/: mcp_tools.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/diagnosis/: page.tsx
frontend/src/app/(dashboard)/intelligence/: page.tsx
frontend/src/app/(dashboard)/inventory/: page.tsx
frontend/src/app/(dashboard)/overview/: page.tsx
frontend/src/app/(dashboard)/procurement/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/ai/: chatinterface.tsx
frontend/src/lib/: axios.ts
frontend/src/services/: agent.service.ts  auth.service.ts  inventory.service.ts  overview.service.ts  procurement.service.ts
scripts/: seed_db.py
