[tool.poetry]
name = "smartspare-ai-v2"
version = "2.0.0"
description = "Industrial Multi-Agent Spare Parts Management"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
chromadb = "^0.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"